@@ -1128,18 +1128,23 @@ var DimpBase = {
             break;
 
         case 'ctx_vfolder_edit':
-            tmp = {
+            this.go('search', {
                 edit_query: 1,
                 mailbox: this.contextMbox(e).retrieve('mbox')
-            };
-            // Fall through
+            });
+            break;
 
         case 'ctx_qsearchopts_advanced':
             this.go('search', tmp);
             break;
 
         case 'ctx_vcontainer_edit':
-            this.go('prefs', { group: 'searches' });
+            HordeCore.redirect(HordeCore.addURLParam(
+                DimpCore.conf.URI_PREFS_IMP,
+                {
+                    group: 'searches'
+                }
+            ));
             break;
 
         case 'ctx_qsearchby_all':
